i didn't really solve the jumping issue, so i changed the position of the hexcode instead

--- a/color-flipper/styles.css
+++ b/color-flipper/styles.css
@@ -128,21 +128,25 @@ body{
     font-size: calc(0.5em + 1vw);
     margin: 0;
     padding: 0;
+    width: 100%;
+    height: 100%;
+    max-width: 100vw;
+    max-height: 100vh;
 }
+/* changing the body selector to html ruins the whole thing... why??? */
 
 .top-nav{
     /* width: 93vw; */
 
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
 
     font-family: 'AT Osmose', sans-serif;
     font-size: 1.4em;
 
     padding: .2em 0;
-
     margin: 0 auto; 
     /* 0 auto centers the top nav, as well as the bottom border */
 
@@ -160,8 +164,17 @@ ul{
     padding: 0;
 }
 
+.colflip{
+    margin: 0 0 0 3em;
+}
+
+.flip{
+    margin: 0 2em 0 2em;
+}
+
 .hexcode{
     width: 5vw;
+    /* margin: 0 2em 0 0; */
 }
 
 button{
@@ -193,4 +206,52 @@ button:hover{
     cursor: pointer;
 }
 
+.body-center {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 20vh 20vw;
+  }
+  
+.body-center ul span {
+    padding: 3em;
+    height: 100px;
+    font-family: 'AT Osmose', sans-serif;
+    font-size: 10rem;
+    text-shadow: 0px 10px 15px 1px rgba(0,0,0,0.75);
+    /* background-color: rgba(221, 221, 221, 0.678); */
+  }
+
 /* for hovers, to avoid content jumping, the border values for the hover should also be applied to the static pseudostate */
+
+/* Media query for smaller screens */
+@media (max-width: 768px){
+    button{
+        padding: 1rem;
+        display: inline-flex;
+        align-items: center; 
+    }
+
+    .body-center ul span {
+        padding: 0 0px;
+        height: 100px;
+        font-family: 'AT Osmose', sans-serif;
+        font-size: 5rem;
+      }
+}
+
+/* Media query for larger screens */
+@media (min-width: 1000px){
+    button{
+        padding: 1rem;
+        display: inline-flex;
+        align-items: center; 
+    }
+
+    .body-center ul span {
+        padding: 0 0px;
+        height: 100px;
+        font-family: 'AT Osmose', sans-serif;
+        font-size: 3rem;
+      }
+}
